# intensive-dance

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  providers.json  pyproject.toml  sbt_Ballet_edu.html  sbt_Notice.html  sbt_Schedule.html
concept/: data.json  index.html
data/: abc-dance.json  abt-jko-school.json  academie-danse-biarritz.json  academie-ete-nice.json  academie-princesse-grace.json  academie-theilaia.json  accademia-iacopini.json  accademia-internazionale-coreutica.json  accademia-teatro-alla-scala.json  akademia-sztuki-baletowej.json  alberta-ballet-school.json  american-midwest-ballet.json  art-ballet-gdynia.json  art-in-motion-munich.json  art-of-zurich.json  art-studio-danza.json  arteballetto.json  associazione-europea-danza.json  ateneo-della-danza.json  attitude-ballet-studios.json  australian-ballet-school.json  baletni-akademie-pollertova.json  ballet-ireland.json  ballet-ruso-barcelona.json  ballet-summer-course-budapest.json  ballet-workshops-bucharest.json  balletkompagniet-copenhagen.json  balletstage.json  ballett-dortmund.json  balletto-di-roma.json  ballettratten.json  bayer-ballet-academy.json  benedict-manniegel.json  bobbio-summer-ballet-intensive.json  bolshoi-summer-intensive-tokyo.json  boston-ballet-school.json  brussels-international-ballet.json  bubenicek-masterclasses.json  canadas-national-ballet-school.json  central-school-of-ballet.json  (+109 more)
docs/: buildable.md  candidates.md  data-model.md  erd.md  solution-design-location-search.md
review/: index.html
schema/: offering.schema.json
tests/: test_abc_dance.py  test_abt_jko_school.py  test_academie_danse_biarritz.py  test_academie_ete_nice.py  test_academie_princesse_grace.py  test_academie_theilaia.py  test_accademia_iacopini.py  test_accademia_internazionale_coreutica.py  test_accademia_teatro_alla_scala.py  test_akademia_sztuki_baletowej.py  test_alberta_ballet_school.py  test_american_midwest_ballet.py  test_art_ballet_gdynia.py  test_art_in_motion_munich.py  test_art_of_ballet_summer_course.py  test_art_studio_danza.py  test_arteballetto.py  test_associazione_europea_danza.py  test_ateneo_della_danza.py  test_attitude_ballet_studios.py  test_audit.py  test_australian_ballet_school.py  test_baletni_akademie_pollertova.py  test_ballet_ireland.py  test_ballet_ruso_barcelona.py  test_ballet_summer_course_budapest.py  test_balletstage.py  (+134 more)
(+204 files in other folders)
