[project]
name = "intensive-dance"
version = "0.1.0"
description = "Scrapers + registry for worldwide classical & contemporary ballet intensives and master classes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "selectolax>=0.3.30",
    "pydantic>=2.11",
]

[dependency-groups]
dev = [
    "ruff>=0.14",
    "pytest>=8.3",
    "ty>=0.0.44",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intensive_dance"]

[tool.ruff]
line-length = 100
